examples/deployment-scaler-demo-manifests.yaml
---
# Source: kubecraft/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app/name: ensaio-demo
    app/realm: sandbox
    app/subset: main
  name: ensaio-demo
  namespace: default
spec:
  selector:
    matchLabels:
      app/name: ensaio-demo
      app/subset: main
  template:    
    metadata:
      annotations:
        kubecraft.io/overlays-checksum: 1978a1fea2a419435bb7f303fdb89fd61b33ded6673d769800072dfcd66996b5
      labels:
        app/name: ensaio-demo
        app/realm: sandbox
        app/subset: main
    spec:
      containers:
      - command:
        - sleep
        - infinity
        image: bitnami/kubectl:latest
        imagePullPolicy: IfNotPresent
        name: app
      serviceAccountName: ensaio-k8s-management
