examples/deployment-scaler-demo-output.yaml
---
# Source: kubecraft/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app/name: ensaio-demo
    app/realm: sandbox
    app/subset: main
  name: ensaio-demo
  namespace: default
spec:
  selector:
    matchLabels:
      app/name: ensaio-demo
      app/subset: main
  template:    
    metadata:
      labels:
        app/name: ensaio-demo
        app/realm: sandbox
        app/subset: main
    spec:
      containers:
      - command:
        - sleep
        - infinity
        image: bitnami/kubectl:latest
        name: app
      serviceAccountName: ensaio-k8s-management
