examples/deployment-with-folder-from-secret-demo-manifests.yaml
---
# Source: kubecraft/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app/name: ensaio-demo
    app/realm: sandbox
    app/subset: main
  name: ensaio-demo
  namespace: default
spec:
  selector:
    matchLabels:
      app/name: ensaio-demo
      app/subset: main
  template:    
    metadata:
      annotations:
        kubecraft.io/overlays-checksum: c524603bacc4ad98a6cfecfc26201dd9aec4a73d8047b51a9547af60b3856597
      labels:
        app/name: ensaio-demo
        app/realm: sandbox
        app/subset: main
    spec:
      containers:
      - command:
        - sleep
        - infinity
        image: python:3.12-alpine
        imagePullPolicy: IfNotPresent
        name: app
        volumeMounts:
        - mountPath: /root/scripts
          name: external-files
          readOnly: true
        - mountPath: /root/another-scripts
          name: another-script
          readOnly: true
      volumes:
      - name: external-files
        secret:
          defaultMode: 644
          secretName: inspection-scripts
      - name: another-script
        secret:
          defaultMode: 744
          secretName: ensaio-another-script-files
